# SeleniumWithPythonUsingPytest

./: base_test.py  pyproject.toml
tests/: conftest.py  test_amazon.py  test_snapdeal.py
