[tool.poetry]
name = "pytest_project"
version = "0.1.0"
description = "this is pytest framework with toml file"
authors = ["Rihana <rihana@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
selenium = "^4.15.2"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
